// -*- mode: text; -*-

This file is referred by the automatic release script.

[Release History (Japanese)]
<!-- BEGIN-LATEST-JP -->
# x-engine 1.0.0 2024/6/8
* 最初のリリース
<!-- END-LATEST-JP -->